frontend: fix overflow property in users permissions icon for better styling

--- a/meet-ce/frontend/src/assets/styles/_utilities.scss
+++ b/meet-ce/frontend/src/assets/styles/_utilities.scss
@@ -109,6 +109,7 @@
 
 .ov-users-permissions {
 	color: var(--ov-meet-icon-users-permissions) !important;
+	overflow: none;
 	@include layout.ov-theme-transition;
 }
 .ov-settings-icon {
